# kasssandra

./: .gitignore  AGENTS.md  Cargo.toml  NOTES-surfpool.md  README.md  justfile  pnpm-lock.yaml  render.yaml
.agent/: README.md
.agent/context/: app.md  build-test-ci.md  indexer.md  overview.md  programs.md  runner.md  sdks.md
.agent/memories/: cargo-test-workspace-only.md  external-crates-over-handrolled.md  markets-rust-v2-island.md  program-and-sdk-naming.md  rebuild-so-before-tests.md  scaled-amounts-ui.md  surfpool-gotchas.md  web3js-address-variant.md
.agent/skills/: parallel-subagent-refactor.md  pr-workflow.md  running-and-verifying.md  splitting-large-files.md
.agent/specs/: market-program.md  oracle-program.md  testing-infrastructure.md  versioning-and-publishing.md
.github/workflows/: ci.yml  docs.yml
app/: README.md  server.mjs  vite.config.ts
app/e2e/: admin.spec.ts  cranks.spec.ts  create.spec.ts  dev-full.ts  global-setup.ts  onchain.ts  rpc.ts  seed-core.ts  seed-drivers.ts  seed.ts  writes.spec.ts
app/src/: App.tsx  index.css  main.tsx
app/test/: actionSequence.unit.test.ts  actions.unit.test.ts  addLiquidity.unit.test.ts  addLiquidityControl.render.test.tsx  ammV04.unit.test.ts  balance.unit.test.ts  bulkLiquidity.unit.test.ts  challenge.e2e.test.ts  challengeCompose.e2e.test.ts  challengeCompose.unit.test.ts  challengeSettleControl.render.test.tsx  claimLpControl.render.test.tsx  claims.e2e.test.ts  create.e2e.test.ts  create.unit.test.ts  groupLiquidityPanel.render.test.tsx  heroFeed.unit.test.ts  indexer.unit.test.ts  kassPrice.unit.test.ts  liquidityActionTabs.render.test.tsx  marketAmount.unit.test.ts  marketContributions.render.test.tsx  marketDetailTabs.render.test.tsx  marketFundingPanel.render.test.tsx  marketOracleNav.render.test.tsx  marketQuestion.render.test.tsx  marketView.unit.test.ts  mockIndexerClient.unit.test.ts  mockMarkets.unit.test.ts  nonceStore.unit.test.ts  oracleStats.unit.test.ts  oracles.unit.test.ts  phaseTimeline.unit.test.ts  priceGrid.unit.test.ts  probabilityGauge.render.test.tsx  send.unit.test.ts  standardWallet.render.test.tsx  tabs.render.test.tsx  writeAction.unit.test.ts  writes.e2e.test.ts
docs-site/: README.md  docs.json  index.mdx  package.json
docs-site/app/: browsing.mdx  challenge.mdx  claim-and-close.mdx  create-oracle.mdx  finalize-and-crank.mdx  participate.mdx  run-locally.mdx
docs-site/architecture/: dapp.mdx  overview.mdx  program.mdx  runner.mdx  sdk.mdx
docs-site/challenge/: amms-and-twap.mdx  composing.mdx  conditional-vaults.mdx  cranking.mdx  economics.mdx  overview.mdx  settle.mdx  trading.mdx
docs-site/concepts/: ai-claims.mdx  challenge-markets.mdx  dead-end-settlement.mdx  economics.mdx  facts.mdx  lifecycle.mdx  oracles-and-questions.mdx  proposals.mdx  tokens.mdx
docs-site/contributing/: build-and-test.mdx  conventions.mdx  glossary.mdx  repo-layout.mdx
docs-site/guide/: ai-assisted-claims.mdx  quickstart.mdx  what-is-kassandra.mdx  why-optimistic-oracles.mdx
docs-site/ops/: clusters-and-rpc.mdx  deploy-program.mdx  docs-site.mdx  runner.mdx
docs-site/protocol/: accounts.mdx  constants.mdx  errors.mdx  instructions.mdx  overview.mdx  pdas.mdx  phases.mdx
docs-site/sdk/: account-decoders.mdx  amm-v04.mdx  futarchy.mdx  instruction-builders.mdx  overview.mdx  pdas.mdx  recipes.mdx
docs/design/: delphi-style-guide.md
docs/plans/: 2026-06-29-challenge-rework-recon.md  2026-06-29-kassandra-challenge-rework.md  2026-06-29-kassandra-design.md  2026-06-29-kassandra-dispute-core.md  2026-06-29-kassandra-futarchy-governance.md  2026-06-29-kassandra-happy-path.md  2026-06-29-kassandra-settlement-economics.md  2026-06-30-kassandra-deadend-settlement.md  2026-06-30-kassandra-full-futarchy-governance.md  2026-06-30-kassandra-runner.md  2026-06-30-kassandra-sdk.md  2026-06-30-kassandra-staker-settlement.md  2026-06-30-kassandra-surfpool-e2e.md  2026-06-30-wire-runner-payload.md  2026-07-01-kassandra-challenge-settle-e2e.md  2026-07-01-kassandra-dust-sweep.md  2026-07-01-kassandra-meteora-followon.md  2026-07-01-kassandra-meteora-spot.md  2026-07-01-kassandra-runner-submission.md  (+15 more)
indexer/: Cargo.toml
indexer/src/: api.rs  config.rs  db.rs  decoder.rs  main.rs  meta_fetch.rs  processor.rs  reconcile.rs  state.rs
indexer/src/db/: cursor.rs  events.rs  mod.rs  oracle_meta.rs  tests.rs
indexer/src/market/: api.rs  db.rs  json.rs  mod.rs  processor.rs  rpc.rs
programs/kassandra/: Cargo.toml  README.md
programs/kassandra/src/: config.rs  error.rs  instruction.rs  lib.rs  price.rs  state.rs
programs/kassandra/src/cpi/: metadao.rs  mod.rs
programs/kassandra/src/processor/: claims.rs  close_ai_claim.rs  close_market.rs  create_oracle.rs  finalize_ai_claims.rs  finalize_facts.rs  finalize_oracle.rs  finalize_proposals.rs  guards.rs  init_protocol.rs  kass_price.rs  mod.rs  open_challenge.rs  propose.rs  resolve_deadend.rs  set_config.rs  set_governance.rs  settle_challenge.rs  submit_ai_claim.rs  submit_fact.rs  sweep_oracle.rs  vote_fact.rs
programs/kassandra/tests/: advance_phase.rs  ai_claim.rs  challenge_e2e.rs  claims.rs  closure.rs  compute_units.rs  compute_units.snap  create_oracle.rs  deadend_settlement.rs  dispatch.rs  dispute_harness.rs  emissions.rs  finalize_facts.rs  finalize_oracle.rs  finalize_proposals.rs  governance_seam.rs  governance_setup.rs  init_protocol.rs  invariants.rs  kass_price.rs  lifecycle_e2e.rs  metadao_cpi.rs  metadao_v06_cpi.rs  open_challenge.rs  propose.rs  recon_lp_resolution.rs  resolve_deadend.rs  set_config.rs  settle_challenge.rs  settlement_e2e.rs  smoke.rs  state_layout.rs  submit_fact.rs  sweep.rs  vote_fact.rs
programs/kassandra/tests/common/: mod.rs
runner/: Cargo.toml  README.md
runner/src/: anthropic.rs  cli.rs  constants.rs  fetch.rs  hashing.rs  lib.rs  main.rs  prompt.rs  rpc.rs  submit.rs
scripts/: README.md  dev-full.sh  e2e-playwright-fork.sh  e2e-playwright.sh  fetch-metadao.sh
sdk/: NOTES-api.md  README.md  package.json  tsconfig.json
sdk-rs/: Cargo.toml
sdk-rs/src/: accounts.rs  (+3 more)
skills/: README.md
(+262 files in other folders)
