[package]
name = "kassandra-indexer"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
carbon-core = { workspace = true }
carbon-rpc-transaction-crawler-datasource = { workspace = true }
env_logger = { workspace = true }
kassandra-sdk = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-commitment-config = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tower-http = { workspace = true }
